RESOLVED FIXED159967
[iPhone] Playing a video on tudou.com plays only sound, no video
https://bugs.webkit.org/show_bug.cgi?id=159967
Summary [iPhone] Playing a video on tudou.com plays only sound, no video
Myles C. Maxfield
Reported 2016-07-20 01:13:49 PDT
[iPhone] Playing a video on tudou.com plays only sound, no video
Attachments
WIP (42.75 KB, patch)
2016-07-20 01:15 PDT, Myles C. Maxfield
buildbot: commit-queue-
Archive of layout-test-results from ews102 for mac-yosemite (889.19 KB, application/zip)
2016-07-20 07:52 PDT, Build Bot
no flags
Archive of layout-test-results from ews114 for mac-yosemite (1.54 MB, application/zip)
2016-07-20 08:01 PDT, Build Bot
no flags
WIP (42.83 KB, patch)
2016-07-20 09:17 PDT, Myles C. Maxfield
no flags
Archive of layout-test-results from ews107 for mac-yosemite-wk2 (895.25 KB, application/zip)
2016-07-20 09:55 PDT, Build Bot
no flags
WIP (49.54 KB, patch)
2016-07-20 10:24 PDT, Myles C. Maxfield
no flags
Patch (53.95 KB, patch)
2016-07-20 12:29 PDT, Myles C. Maxfield
no flags
Patch (53.04 KB, patch)
2016-07-20 13:25 PDT, Myles C. Maxfield
no flags
Patch (52.58 KB, patch)
2016-07-20 13:56 PDT, Myles C. Maxfield
jonlee: review+
Needs WK2 Review (55.06 KB, patch)
2016-07-20 20:01 PDT, Myles C. Maxfield
no flags
Patch for committing (55.21 KB, patch)
2016-07-21 12:49 PDT, Myles C. Maxfield
no flags
Patch for committing (55.25 KB, patch)
2016-07-21 12:50 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2016-07-20 01:15:18 PDT
WebKit Commit Bot
Comment 2 2016-07-20 01:16:28 PDT
Attachment 284091 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:9: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 22 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 3 2016-07-20 07:52:02 PDT
Comment on attachment 284091 [details] WIP Attachment 284091 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1713223 New failing tests: media/video-playsinline.html
Build Bot
Comment 4 2016-07-20 07:52:06 PDT
Created attachment 284104 [details] Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5 2016-07-20 08:01:15 PDT
Comment on attachment 284091 [details] WIP Attachment 284091 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1713240 New failing tests: media/video-playsinline.html
Build Bot
Comment 6 2016-07-20 08:01:18 PDT
Created attachment 284105 [details] Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Myles C. Maxfield
Comment 7 2016-07-20 09:17:19 PDT
WebKit Commit Bot
Comment 8 2016-07-20 09:19:50 PDT
Attachment 284110 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:9: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 22 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 9 2016-07-20 09:55:27 PDT
Comment on attachment 284110 [details] WIP Attachment 284110 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1714417 New failing tests: media/video-playsinline.html
Build Bot
Comment 10 2016-07-20 09:55:30 PDT
Created attachment 284114 [details] Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Jon Lee
Comment 11 2016-07-20 10:02:36 PDT
Myles C. Maxfield
Comment 12 2016-07-20 10:24:43 PDT
Jon Lee
Comment 13 2016-07-20 11:22:44 PDT
Comment on attachment 284121 [details] WIP View in context: https://bugs.webkit.org/attachment.cgi?id=284121&action=review > Source/WebCore/html/MediaElementSession.cpp:458 > + bool requiresPlaysInline = settings->fullscreenMediaPlaybackRequiresPlaysInlineAttributeAbsence(); The phrase construction is awkward. I understand how there could be confusion with two "requires"--how about allowsInlineMediaPlaybackWithPlaysInlineAttribute and allowsInlineMediaPlaybackWithWebKitPlaysInlineAttribute
Jon Lee
Comment 14 2016-07-20 11:28:16 PDT
Comment on attachment 284121 [details] WIP View in context: https://bugs.webkit.org/attachment.cgi?id=284121&action=review >> Source/WebCore/html/MediaElementSession.cpp:458 >> + bool requiresPlaysInline = settings->fullscreenMediaPlaybackRequiresPlaysInlineAttributeAbsence(); > > The phrase construction is awkward. I understand how there could be confusion with two "requires"--how about allowsInlineMediaPlaybackWithPlaysInlineAttribute and allowsInlineMediaPlaybackWithWebKitPlaysInlineAttribute By two "requires" I meant keeping the "inlineMediaPlaybackRequires" construct.
Myles C. Maxfield
Comment 15 2016-07-20 12:29:27 PDT
Myles C. Maxfield
Comment 16 2016-07-20 13:25:34 PDT
Jeremy Jones
Comment 17 2016-07-20 13:49:10 PDT
The new property name is much better. *Absence version of the property name still appears in many places. Use the new name everywhere.
Myles C. Maxfield
Comment 18 2016-07-20 13:56:56 PDT
Jeremy Jones
Comment 19 2016-07-20 14:03:39 PDT
Comment on attachment 284144 [details] Patch LGTM
Jon Lee
Comment 20 2016-07-20 14:23:25 PDT
Comment on attachment 284144 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=284144&action=review > Source/WebKit2/UIProcess/API/C/WKPreferencesRefPrivate.h:198 > +// Defaults to false. Not "true on iOS, false elsewhere."? > Source/WebKit2/UIProcess/API/C/WKPreferencesRefPrivate.h:202 > +// Defaults to false. Ditto
Myles C. Maxfield
Comment 21 2016-07-20 15:42:58 PDT
Myles C. Maxfield
Comment 22 2016-07-20 17:20:42 PDT
Mitz pointed out that, because this touches WK2, it needs to be reviewed by an owner.
WebKit Commit Bot
Comment 23 2016-07-20 17:43:07 PDT
Re-opened since this is blocked by bug 160003
Myles C. Maxfield
Comment 24 2016-07-20 20:01:32 PDT
Created attachment 284183 [details] Needs WK2 Review
Anders Carlsson
Comment 25 2016-07-21 12:33:37 PDT
Comment on attachment 284183 [details] Needs WK2 Review WK2 part looks fine.
Myles C. Maxfield
Comment 26 2016-07-21 12:35:54 PDT
Comment on attachment 284183 [details] Needs WK2 Review View in context: https://bugs.webkit.org/attachment.cgi?id=284183&action=review > Source/WebKit2/UIProcess/API/C/WKPreferencesRefPrivate.h:198 > +// Defaults to false. I need to re-apply Jon's comment "true on iOS, false elsewhere." > Source/WebKit2/UIProcess/API/C/WKPreferencesRefPrivate.h:202 > +// Defaults to false. Ditto.
Myles C. Maxfield
Comment 27 2016-07-21 12:49:11 PDT
Created attachment 284246 [details] Patch for committing
Myles C. Maxfield
Comment 28 2016-07-21 12:50:18 PDT
Created attachment 284247 [details] Patch for committing
WebKit Commit Bot
Comment 29 2016-07-21 13:20:21 PDT
Comment on attachment 284247 [details] Patch for committing Clearing flags on attachment: 284247 Committed r203520: <http://trac.webkit.org/changeset/203520>
Myles C. Maxfield
Comment 30 2016-07-21 16:56:49 PDT
Note You need to log in before you can comment on or make changes to this bug.