Source/WebCore/testing/InternalSettings.h
@@ -108,6 +108,8 @@ public:
         bool m_allowsInlineMediaPlayback;
         bool m_allowsInlineMediaPlaybackAfterFullscreen;
         bool m_inlineMediaPlaybackRequiresPlaysInlineAttribute;
+        bool m_allowsInlineMediaPlaybackWithPlaysInlineAttribute;
+        bool m_allowsInlineMediaPlaybackWithWebKitPlaysInlineAttribute;
 #if ENABLE(INDEXED_DATABASE_IN_WORKERS)
         bool m_indexedDBWorkersEnabled;
 #endif
@@ -163,6 +165,8 @@ public:
     void setAllowsInlineMediaPlayback(bool, ExceptionCode&);
     void setAllowsInlineMediaPlaybackAfterFullscreen(bool, ExceptionCode&);
     void setInlineMediaPlaybackRequiresPlaysInlineAttribute(bool, ExceptionCode&);
+    void setAllowsInlineMediaPlaybackWithPlaysInlineAttribute(bool, ExceptionCode&);
+    void setAllowsInlineMediaPlaybackWithWebKitPlaysInlineAttribute(bool, ExceptionCode&);
     void setIndexedDBWorkersEnabled(bool, ExceptionCode&);
     String userInterfaceDirectionPolicy(ExceptionCode&);
     void setUserInterfaceDirectionPolicy(const String& policy, ExceptionCode&);
